2015-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-histfile-override): Fix docstring.
	(tramp-open-shell, tramp-maybe-open-connection): Set also
	HISTFILESIZE and HISTSIZE when needed.  (Bug#19731)

2015-02-02  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--find-non-dependencies): New
	function.
	(package-initialize): Use it to populate `package-selected-packages'.
	(package-menu-execute): Clean unnecessary `and'.
	(package--get-deps): Fix returning duplicates.

2015-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-histfile-override): Add another choice t.
	Use it as default.
	(tramp-open-shell, tramp-maybe-open-connection): Support it.
	(Bug#19731)

2015-02-02  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* emacs-lisp/package.el (package-delete): Remove package from
	package-selected-packages.
	(package-autoremove): Remove unneeded variable.

2015-02-01  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package-selected-packages): Fix :type
	(package-install): Rename ARG to MARK-SELECTED.
	(package--get-deps): Fix for indirect dependencies.
	(package-used-elsewhere-p): Rename to
	(package--used-elsewhere-p): New function.
	(package-reinstall, package-user-selected-packages-install)
	(package-autoremove): Use sharp-quote.
	(package-user-selected-packages-install): Reindent and rename to
	(package-install-user-selected-packages): New function.

2015-02-01  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* emacs-lisp/package.el: Don't allow deleting dependencies.

	(package-used-elsewhere-p): New function.
	(package-delete): Use it, return now an error when trying to
	delete a package used as dependency by another package.

	Add a reinstall package command.
	(package-reinstall): New function.

	Add a package-autoremove command.
	(package-selected-packages): New user var.
	(package-install): Add an optional arg to notify interactive use.