@@ -1,3 +1,8 @@
+2015-02-03  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
+
+	* emacs-lisp/package.el (package-reinstall): Don't change package's selected status.
+	(package-delete): New NOSAVE argument.
+
 2015-02-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp-sh.el (tramp-histfile-override): Fix docstring.
